display img whn hover (need to fix clipping)

--- a/src/app/pages/trois-six-cinq/trois-six-cinq.component.scss
+++ b/src/app/pages/trois-six-cinq/trois-six-cinq.component.scss
@@ -30,7 +30,8 @@
 }
 
 .img-first-plan {
-  height: 50%;
-  position: relative;
-  z-index: 100;
+  position: absolute;
+  img {
+    height: 500px;
+  }
 }
